<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PokemonDetails">

    <data>

        <variable
            name="pokemon_details"
            type="com.example.pokemon.data.PokemonIndividualDetails"
            />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pokemon_details_layout_gotten"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/image_back"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:alpha="0.4"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_pick_animation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_colorFilter="@color/redRecycler"
            app:lottie_fileName="pickanimation.json"
            app:lottie_loop="true"
            app:lottie_speed="1.25" />

        <androidx.cardview.widget.CardView
            android:id="@+id/pokemon_cardview_inner"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@color/yellowRecycler"
            android:translationZ="10dp"
            app:cardBackgroundColor="@color/yellowRecycler"
            app:cardCornerRadius="200dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4">



            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lav_thumbUp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="sprite_animation.json"
                app:lottie_loop="true"
                app:lottie_speed="1.25" />
        </androidx.cardview.widget.CardView>

<!--        inner card to show details-->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:paddingBottom="1000dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="50dp">

                <TextView
                    android:id="@+id/pokemon_name_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:text="TextView"
                    android:textColor="@color/redRecycler"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/pokemon_name_details"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="stats.json"
                    app:lottie_loop="true"
                    app:lottie_speed="1.25" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:text="@string/stats"
                    android:textColor="@color/redRecycler"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/lottieAnimationView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pokemon_name_details" />

                <TextView
                    android:id="@+id/pokemon_stats_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:text="TextView"
                    android:textColor="@color/redRecycler"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/lottieAnimationView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lottieAnimationView"
                    app:layout_constraintTop_toBottomOf="@+id/pokemon_name_details" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottie_animation_height"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="120dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:lottie_autoPlay="true"
                    app:lottie_colorFilter="@color/redRecycler"
                    app:lottie_fileName="height.json"
                    app:lottie_loop="true"
                    app:lottie_speed="1.25" />

                <TextView
                    android:id="@+id/pokemon_details_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:textColor="@color/redRecycler"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/lottie_animation_height"
                    app:layout_constraintStart_toStartOf="@+id/lottie_animation_height"
                    app:layout_constraintTop_toBottomOf="@+id/lottie_animation_height" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/moves_cardview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:elevation="5dp"
                    app:cardBackgroundColor="@color/redRecycler"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alfa_slab_one"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/abilities"
                        android:textColor="@color/myWhite" />


                </androidx.cardview.widget.CardView>

                <com.airbnb.lottie.LottieAnimationView

                    android:id="@+id/lottie_animation_weight"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="50dp"
                    android:backgroundTintMode="src_over"
                    android:foregroundTint="@color/redRecycler"
                    android:tint="@color/redRecycler"
                    android:tintMode="add"
                    app:layout_constraintStart_toEndOf="@+id/lottie_animation_height"
                    app:layout_constraintTop_toBottomOf="@+id/moves_cardview"
                    app:lottie_autoPlay="true"
                    app:lottie_colorFilter="@color/redRecycler"
                    app:lottie_fileName="weight.json"
                    app:lottie_loop="true"
                    app:lottie_speed="1.25"
                    app:tint="@color/redRecycler" />

                <TextView
                    android:id="@+id/pokemon_details_weight_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:textColor="@color/redRecycler"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/lottie_animation_weight"
                    app:layout_constraintStart_toStartOf="@+id/lottie_animation_weight"
                    app:layout_constraintTop_toBottomOf="@+id/lottie_animation_weight" />

                <com.airbnb.lottie.LottieAnimationView

                    android:id="@+id/lottie_animation_order"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintStart_toEndOf="@+id/lottie_animation_weight"
                    app:layout_constraintTop_toBottomOf="@+id/moves_cardview"
                    app:lottie_autoPlay="true"
                    app:lottie_colorFilter="@color/redRecycler"
                    app:lottie_fileName="order.json"
                    app:lottie_loop="true"
                    app:lottie_speed="1.25" />

                <TextView
                    android:id="@+id/pokemon_details_order_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:textColor="@color/redRecycler"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/lottie_animation_order"
                    app:layout_constraintStart_toStartOf="@+id/lottie_animation_order"
                    app:layout_constraintTop_toBottomOf="@+id/lottie_animation_order" />

                <com.airbnb.lottie.LottieAnimationView


                    android:id="@+id/lottie_experience"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintStart_toEndOf="@+id/lottie_animation_order"
                    app:layout_constraintTop_toBottomOf="@+id/moves_cardview"
                    app:lottie_autoPlay="true"
                    app:lottie_colorFilter="@color/redRecycler"
                    app:lottie_fileName="experience.json"
                    app:lottie_loop="true"
                    app:lottie_speed="1.25" />

<!--                abilities to view button-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/select_abilities_to_see"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardBackgroundColor="@color/redRecycler"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alfa_slab_one"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/pick_abilities"
                        android:textColor="@color/myWhite" />


                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/base_experience_details_pokemon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alfa_slab_one"
                    android:textColor="@color/redRecycler"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/lottie_experience"
                    app:layout_constraintStart_toStartOf="@+id/lottie_experience"
                    app:layout_constraintTop_toBottomOf="@+id/lottie_experience" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/alfa_slab_one"

                    android:text="@string/height"
                    android:textColor="@color/redRecycler"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/lottie_animation_height"
                    app:layout_constraintEnd_toEndOf="@+id/lottie_animation_height"
                    app:layout_constraintStart_toStartOf="@+id/lottie_animation_height" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alfa_slab_one"
                    android:text="@string/weight"
                    android:textColor="@color/redRecycler"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/lottie_animation_weight"
                    app:layout_constraintEnd_toEndOf="@+id/lottie_animation_weight"
                    app:layout_constraintEnd_toStartOf="@+id/lottie_animation_order"
                    app:layout_constraintStart_toStartOf="@+id/lottie_animation_weight" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order"
                    android:fontFamily="@font/alfa_slab_one"
                    android:textColor="@color/redRecycler"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/lottie_animation_order"
                    app:layout_constraintEnd_toEndOf="@+id/lottie_animation_order"
                    app:layout_constraintStart_toStartOf="@+id/lottie_animation_order" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baseExperience"
                    android:fontFamily="@font/alfa_slab_one"
                    android:textColor="@color/redRecycler"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/lottie_experience"
                    app:layout_constraintEnd_toEndOf="@+id/lottie_experience"
                    app:layout_constraintStart_toStartOf="@+id/lottie_experience" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

<!--        guidelines-->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.13406293" />


    </androidx.constraintlayout.widget.ConstraintLayout>

<!--        added layouts-->
        <include layout="@layout/restrict_seen_abilites"/>
        <include layout="@layout/layout_moves"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>